--- a/src/app/core/components/shared/details/view-occupazione-suolo-pubblico/view-occupazione-suolo-pubblico.component.html
+++ b/src/app/core/components/shared/details/view-occupazione-suolo-pubblico/view-occupazione-suolo-pubblico.component.html
@@ -61,16 +61,14 @@
     </mat-form-field>
     <mat-form-field class="div-a-third" appearance="outline">
         <mat-label>Inizio occupazione</mat-label>
-        <input formControlName="start_date" [min]="minDate()" matInput [matDatepicker]="start_date" (dateChange)="differenceDate(form, 'end_date', 'start_date', 'total_duration')">
-        <mat-datepicker-toggle matSuffix [for]="start_date"></mat-datepicker-toggle>
-        <mat-datepicker #start_date></mat-datepicker>
+        <input formControlName="start_date" type="date" [min]="minDate()" matInput
+        (dateChange)="differenceDate(form, 'end_date', 'start_date', 'total_duration')">
         <mat-error>{{getErrorMessage(form.get('start_date'))}}</mat-error>
     </mat-form-field>
     <mat-form-field class="div-a-third" appearance="outline">
         <mat-label>Fine occupazione</mat-label>
-        <input formControlName="end_date" [min]="calculateMinDate(form, 'start_date')" matInput [matDatepicker]="end_date" (dateChange)="differenceDate(form, 'end_date', 'start_date', 'total_duration')">
-        <mat-datepicker-toggle matSuffix [for]="end_date"></mat-datepicker-toggle>
-        <mat-datepicker #end_date></mat-datepicker>
+        <input formControlName="end_date" type="date" [min]="calculateMinDate(form, 'start_date')" matInput
+        (dateChange)="differenceDate(form, 'end_date', 'start_date', 'total_duration')">
         <mat-error>{{getErrorMessage(form.get('end_date'))}}</mat-error>
     </mat-form-field>
     <mat-form-field class="div-a-third text-right" appearance="outline">
@@ -86,7 +84,7 @@
         <mat-error>{{getErrorMessage(form.get(['affected_area']))}}</mat-error>
     </div>
 
-    <div class="div-half">
+    <div class="div-half" *ngIf="can_modify && modifiable">
         <button class="button-login" mat-raised-button color="primary" (click)="openMap()">Disegna aree di occupazione</button>
     </div>
 </mat-card>
