--- a/src/app/core/components/shared/view-expert/view-expert.component.html
+++ b/src/app/core/components/shared/view-expert/view-expert.component.html
@@ -32,7 +32,7 @@
     <mat-form-field *ngIf="form.get('type').value == 'person'" class="div-half" appearance="outline">
         <mat-label>Codice fiscale</mat-label>
         <input formControlName="fiscal_code" matInput type="text" oninput="this.value = this.value.toUpperCase()">
-        <button mat-icon-button matSuffix matTooltip="Compila i campi mancanti con i propri dati" (click)="autocomplete()" [disabled]="checkFiscalCode()">
+        <button *ngIf="can_modify" mat-icon-button matSuffix matTooltip="Compila i campi mancanti con i propri dati" (click)="autocomplete()" [disabled]="checkFiscalCode()">
             <mat-icon>post_add</mat-icon>
         </button>
         <mat-error>{{getErrorMessage(form.get('fiscal_code'))}}</mat-error>
@@ -50,9 +50,9 @@
     <mat-form-field class="div-half" appearance="outline">
         <mat-label>Partita IVA</mat-label>
         <input formControlName="vat" matInput type="text">
-        <button mat-icon-button matSuffix matTooltip="Compila i campi mancanti con i propri dati" (click)="autocomplete()" [disabled]="checkVat()">
+        <!-- <button mat-icon-button matSuffix matTooltip="Compila i campi mancanti con i propri dati" (click)="autocomplete()" [disabled]="checkVat()">
             <mat-icon>post_add</mat-icon>
-        </button>
+        </button> -->
         <mat-error>{{getErrorMessage(form.get('vat'))}}</mat-error>
     </mat-form-field>
     <mat-form-field *ngIf="form.get('type').value != 'person'" class="div-half" appearance="outline">
