--- a/src/app/core/components/shared/view-owner/view-owner.component.html
+++ b/src/app/core/components/shared/view-owner/view-owner.component.html
@@ -92,9 +92,7 @@
     </mat-form-field>
     <mat-form-field *ngIf="form.get('type').value == 'person'" class="div-half" appearance="outline">
         <mat-label>Data di nascita</mat-label>
-        <input  formControlName="birthday" matInput [matDatepicker]="picker_owner">
-        <mat-datepicker-toggle matSuffix [for]="picker_owner"></mat-datepicker-toggle>
-        <mat-datepicker #picker_owner></mat-datepicker>
+        <input  formControlName="birthday" type="date" matInput>
         <mat-error>{{getErrorMessage(form.get('birthday'))}}</mat-error>
     </mat-form-field>
     <ng-container formGroupName="address">
