--- a/src/app/dettagli-pratica/dettagli-pratica.component.html
+++ b/src/app/dettagli-pratica/dettagli-pratica.component.html
@@ -14,10 +14,10 @@
     <p class="div-half"><b>Tipologia: </b> {{data_procedure.type | procedureType}}</p>
     <p class="div-half"><b>Categoria: </b> {{data_procedure.category | categoryPipe}}</p>
     <p class="div-full"><b>Causale: </b> {{data_procedure.subject}}</p>
-    <p class="div-half"><b>Prorogabile: </b> {{data_procedure.can_be_extended | canExtended}}</p>
     <p class="div-half"><b>Data creazione: </b> {{data_procedure.created_at}}</p>
     <p class="div-half"><b>Ultimo aggiornamento: </b> {{data_procedure.updated_at}}</p>
-    <p class="div-full"><b>Allegati pratica: </b> {{(data_procedure.all_mandatory_documents_uploaded | documentsUploaded)['tooltip']}}</p>
+    <p class="div-half"><b>Allegati pratica: </b> {{(data_procedure.all_mandatory_documents_uploaded | documentsUploaded)['tooltip']}}</p>
+    <p class="div-half"><b>Prorogabile: </b> {{data_procedure.can_be_extended | canExtended}}</p>
 </div>
 <mat-tab-group #tabGroup *ngIf="!isLoading"
 (selectedIndexChange)="changedTab($event)">
