--- a/src/app/pratiche/moduli/components-edilizia/expert/expert.component.html
+++ b/src/app/pratiche/moduli/components-edilizia/expert/expert.component.html
@@ -56,10 +56,10 @@
     <mat-form-field class="div-half" appearance="outline">
         <mat-label>Partita IVA</mat-label>
         <input formControlName="vat" matInput type="text">
-        <button mat-icon-button matSuffix matTooltip="Compila i campi mancanti con i propri dati"
+        <!-- <button mat-icon-button matSuffix matTooltip="Compila i campi mancanti con i propri dati"
             (click)="autocomplete()" [disabled]="checkVat()">
             <mat-icon>post_add</mat-icon>
-        </button>
+        </button> -->
         <mat-error>{{getErrorMessage(form.get('vat'))}}</mat-error>
     </mat-form-field>
     <mat-form-field class="div-half" appearance="outline">
