--- a/src/app/pratiche/moduli/components-edilizia/occupazione-edile/occupazione-edile.component.html
+++ b/src/app/pratiche/moduli/components-edilizia/occupazione-edile/occupazione-edile.component.html
@@ -129,16 +129,14 @@
     </ng-container>
     <mat-form-field class="div-a-third" appearance="outline">
         <mat-label>Inizio lavori</mat-label>
-        <input formControlName="start_date" [min]="minStartDate" matInput [matDatepicker]="start_date" (dateChange)="calculateMinDate(form, 'end_date')">
-        <mat-datepicker-toggle matSuffix [for]="start_date"></mat-datepicker-toggle>
-        <mat-datepicker #start_date></mat-datepicker>
+        <input formControlName="start_date" type="date" [min]="minStartDate" matInput
+        (blur)="checkDate('start_date', minStartDate)">
         <mat-error>{{getErrorMessage(form.get('start_date'))}}</mat-error>
     </mat-form-field>
     <mat-form-field class="div-a-third" appearance="outline">
         <mat-label>Fine lavori</mat-label>
-        <input formControlName="end_date" [min]="minEndDate" matInput [matDatepicker]="end_date" (dateChange)="differenceDate(form, 'end_date', 'start_date', 'total_duration')">
-        <mat-datepicker-toggle matSuffix [for]="end_date"></mat-datepicker-toggle>
-        <mat-datepicker #end_date></mat-datepicker>
+        <input formControlName="end_date" type="date" [min]="minEndDate" matInput 
+        (blur)="checkDate('end_date', minEndDate)">
         <mat-error>{{getErrorMessage(form.get('end_date'))}}</mat-error>
     </mat-form-field>
     <mat-form-field class="div-a-third text-right" appearance="outline">
