--- a/src/app/pratiche/moduli/components-edilizia/rottura-suolo/rottura-suolo.component.html
+++ b/src/app/pratiche/moduli/components-edilizia/rottura-suolo/rottura-suolo.component.html
@@ -19,7 +19,6 @@
             <input matInput formControlName="motive" type="text">
             <mat-error>{{getErrorMessage(form.get(['description','motive']))}}</mat-error>
         </mat-form-field>
-        <mat-expansion-panel expanded>
         <mat-form-field class="div-a-third" appearance="outline">
             <mat-label>Tipo di posa</mat-label>
             <input matInput formControlName="laying_type" type="text">
@@ -40,7 +39,6 @@
             <mat-hint>Lunghezza espressa in metri</mat-hint>
             <mat-error>{{getErrorMessage(form.get(['description','length']))}}</mat-error>
         </mat-form-field>
-    </mat-expansion-panel>
         <mat-form-field class="div-full" appearance="outline">
             <mat-label>Note</mat-label>
             <textarea matInput formControlName="notes" type="text"></textarea>
@@ -50,16 +48,14 @@
     </ng-container>
     <mat-form-field class="div-a-third" appearance="outline">
         <mat-label>Inizio lavori</mat-label>
-        <input formControlName="start_date" [min]="minStartDate" matInput [matDatepicker]="start_date" (dateChange)="calculateMinDate(form, 'end_date')">
-        <mat-datepicker-toggle matSuffix [for]="start_date"></mat-datepicker-toggle>
-        <mat-datepicker #start_date></mat-datepicker>
+        <input formControlName="start_date" type="date" [min]="minStartDate" matInput
+        (blur)="checkDate('start_date', minStartDate)">
         <mat-error>{{getErrorMessage(form.get('start_date'))}}</mat-error>
     </mat-form-field>
     <mat-form-field class="div-a-third" appearance="outline">
         <mat-label>Fine lavori</mat-label>
-        <input formControlName="end_date" [min]="minEndDate" matInput [matDatepicker]="end_date" (dateChange)="differenceDate(form, 'end_date', 'start_date', 'duration')">
-        <mat-datepicker-toggle matSuffix [for]="end_date"></mat-datepicker-toggle>
-        <mat-datepicker #end_date></mat-datepicker>
+        <input formControlName="end_date" type="date" [min]="minEndDate" matInput
+        (blur)="checkDate('end_date', minEndDate)">
         <mat-error>{{getErrorMessage(form.get('end_date'))}}</mat-error>
     </mat-form-field>
     <mat-form-field class="div-a-third text-right" appearance="outline">
