fixing filters and results

--- a/src/app/core/components/shared/filter-procedures/filter-procedures.component.html
+++ b/src/app/core/components/shared/filter-procedures/filter-procedures.component.html
@@ -19,7 +19,7 @@
         </mat-select>
     </mat-form-field>
     <mat-form-field class="div-a-quarter" appearance="outline">
-        <mat-label>N. Protocollo</mat-label>
+        <mat-label>N. pratica</mat-label>
         <input formControlName="protocol" matInput type="text">
     </mat-form-field>
     <mat-form-field class="div-a-quarter" appearance="outline">
