--- a/src/app/mie-pratiche/mie-pratiche.component.html
+++ b/src/app/mie-pratiche/mie-pratiche.component.html
@@ -13,7 +13,7 @@
     </ng-container>
     
     <ng-container matColumnDef="protocol">
-      <th mat-header-cell *matHeaderCellDef>N. protocollo</th>
+      <th mat-header-cell *matHeaderCellDef>N. pratica</th>
       <td mat-cell *matCellDef="let element"> {{element.protocol}} </td>
     </ng-container>
 
