--- a/src/app/core/components/shared/details/view-traslochi-lavori/view-traslochi-lavori.component.html
+++ b/src/app/core/components/shared/details/view-traslochi-lavori/view-traslochi-lavori.component.html
@@ -81,7 +81,7 @@
 
     <div class="div-half" appearance="outline">
         <mat-label>N. geometrie occupazione</mat-label>
-        <input matInput readonly="true" type="number" [value]="form.get(['affected_area']).value.length != '' ? 1 : ''">
+        <input matInput readonly="true" type="number" [value]="form.get(['affected_area']).value != null ? 1 : ''">
         <mat-error>{{getErrorMessage(form.get(['affected_area']))}}</mat-error>
     </div>
 
