fixed cookie_name and commitPratica

--- a/src/app/dettagli-pratica/dettagli-pratica.component.html
+++ b/src/app/dettagli-pratica/dettagli-pratica.component.html
@@ -3,7 +3,7 @@
 </div>
 <div *ngIf="!isLoading">
     <div class="div-full commit-procedure">
-        <button [disabled]="!can_commit" mat-raised-button color="primary" (click)="getProcedure()">
+        <button [disabled]="!can_commit" mat-raised-button color="primary" (click)="commitPratica()">
             Inoltra pratica
         </button>
     </div>
