fixed tokenExpired check, added footer

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -8,3 +8,13 @@
 mat-card {
     margin: 0 auto;
 }
+
+#footerHome {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 26px;
+    width: 100%;
+    overflow: hidden;
+  }
+  
