changed app name

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
             Benvenuti
         </mat-card-title>
         <mat-card-subtitle>
-            Sezione dedicata alla richiesta delle Autorizzazioni per il Comune di Chiavari
+            Sezione dedicata alla richiesta delle Autorizzazioni per il SUEFrontend
         </mat-card-subtitle>
         <mat-card-content>
             Seguendo pochissimi passaggi avrete la possibilità di inoltrarle in modo digitale!.
